# bc_pibot_models_api

./: .dockerignore  .env.example  .gitignore  CHECKLIST_FIX_LORA.py  DEBUGGING_LORA_STEP_BY_STEP.md  Dockerfile  Dockerfile.gpu  HOW_TO_FIX_LORA.md  INTEGRATION.md  LORA_INTEGRATION.md  PLAN_ACCION_LORA.py  README.md  RESUMEN_FINAL.py  SHARED_ENCODER_FIXED.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: routes.py  schemas.py
app/model/: __init__.py  loader.py  normalizer.py  predictor.py  router.py
docs/: normalizer_rules.md
scripts/: healthcheck.py
tests/: compare_training_vs_endpoint.py  diagnose_lora_mismatch.py  endpoint_chat.py  find_target_modules.py  test_api.py  test_normalizer.py  test_predictor.py
