# ──────────────────────────────────────────────
# PIBot Serving – FastAPI endpoint for JointBERT
# ──────────────────────────────────────────────

[project]
name = "pibert-serving"
version = "1.0.0"
description = "Production-ready FastAPI service for PIBot JointBERT multi-head intent + slot filling model"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "PIBot Team" },
]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "torch>=2.5,<3",
    "transformers==4.46.0",
    "huggingface-hub>=0.26,<1",
    "prometheus-fastapi-instrumentator>=7.0,<8",
    "structlog>=24.0",
    "python-json-logger>=2.0,<3",
    "httpx>=0.27",
    "sentence-transformers>=5.2,<6",
]

[project.optional-dependencies]
crf = ["pytorch-crf>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
